# Fraud_Detection_MLOPS_Platform

./: .agent.rar  .gitignore  README.md  docker-compose.yml
.agent/persona_context/: architecture-decisions.md  backend-implementation.md  business-strategy.md  cross-persona-review.md  data-science-specs.md  database-design.md  handoff-summary.md  product-requirements.md  project-manifest.md  project-state.md  security-analysis.md  technical-specs.md  ux-design-system.md
.agent/personas/: 01-chief-business-strategist.md  (+8 more)
backend/: Dockerfile  alembic.ini  containers.txt  create_containers.py  list_containers.py  pyproject.toml  show_connection_info.py  show_container_contents.py  test_model_upload.py
backend/alembic/: env.py
backend/alembic/versions/: 20260117_001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  ab_testing.py  alerts.py  dashboard.py  datasets.py  features.py  inference.py  models.py  monitoring.py  placeholders.py  retraining.py  training.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  rate_limit.py  storage.py
backend/app/models/: __init__.py  dataset.py  feature_set.py  ml_model.py
backend/app/schemas/: dataset.py
backend/app/services/: ab_testing_service.py  alert_service.py  audit_service.py  data_service.py  drift_service.py  feature_service.py  retraining_service.py  training_service.py
backend/app/workers/: celery_app.py  feature_worker.py  monitoring_worker.py  scheduler.py  training_worker.py
backend/scripts/: test_storage_connection.py
frontend/: Dockerfile  vite.config.ts
(+33 files in other folders)
